--- a/style.css
+++ b/style.css
@@ -37,6 +37,7 @@ h1 {
     font-size : 36px;
     margin: 0px;
     text-align: center;
+    font-color : green;
     
 }
 .stock{
@@ -51,6 +52,7 @@ h2{
     margin-bottom: 8px;
     margin-top: 0px;
     font-size: 32px;
+    font -color : red;
 }
 
 
